2007-05-19  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.18.modules: Use gtk-engines-2-10
	branch.

2007-05-16  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.18.modules: Use pango-1-16 branch.

2007-05-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules:
	Up the cairo dep to 1.4.6 to get the latest and greatest.

2007-05-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules:
	Add build dependency on gnome-icon-theme for gnome-system-monitor
	module.

2007-05-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules:
	Add build dependencies on libgnomeprint for tomboy module.

2007-05-14  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.18.modules: Revert unwanted commit.

2007-05-14  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-suites-2.20.modules: Make sound-juicer depend
	on libmusicbrainz.

2007-05-14  William Jon McCann  <mccann@jhu.edu>

	* modulesets/freedesktop.modules: Use hicolor-icon-theme 0.10
	as we do in freedesktop-2.18.modules.

2007-05-07  Richard Hult  <richard@imendio.com>

	* jhbuild/commands/bootstrap.py: Make the skip list apply to 
	bootstrapping as well, bug #436633.

2007-05-06  Jonathon Jongsma  <jjongsma@gnome.org>

	* modulesets/gnome-2.18.modules, modulesets/gnome-2.20.modules: nemiver now
	depends on gnome-doc-utils.

2007-05-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py,
	jhbuild/utils/cmds.py: replaced calls to command -v by a new
	has_command function, which does iterate over $PATH itself.
	(followup to #301259, suggestion by Johan Dahlin)

2007-05-05  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py:
	replaced call to which by call to command -v to determine if wget
	or curl are available; so it should work on any sh-compatible shell,
	and on Mac OS X (followup to #301259)
