@@ -1,3 +1,7 @@
+2007-05-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* jhbuild/config.py: Do not mix tabs and spaces.
+
 2007-05-19  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* modulesets/gnome-2.18.modules: Use gtk-engines-2-10
